compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__generic_function.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\npub type Wob(a) { Wob }\n@deprecated(\"deprecation message\")\npub fn main() { Wob }\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wob": {
          "documentation": null,
          "deprecation": null,
          "parameters": 1,
          "constructors": [
            {
              "documentation": null,
              "name": "Wob",
              "parameters": []
            }
          ]
        }
      },
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": {
            "message": "deprecation message"
          },
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "uses-go-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true,
            "can-run-on-go": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Wob",
            "package": "my_package",
            "module": "my/module",
            "parameters": [
              {
                "kind": "variable",
                "id": 0
              }
            ]
          }
        }
      }
    }
  }
}
